// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`For Material Button :  Should correctly render <Button /> 1`] = `
<ButtonWrapper(Material Button)>
  <Material Button
    finalClass="Button"
  >
    <button
      className="Button"
      onClick={[Function]}
      style={Object {}}
    >
      This is a Material Button
    </button>
  </Material Button>
</ButtonWrapper(Material Button)>
`;

exports[`For Material Button :  Should correctly render <Button onClick="custommethod" /> 1`] = `
<ButtonWrapper(Material Button)
  onClick={[MockFunction]}
>
  <Material Button
    finalClass="Button"
    onClick={[MockFunction]}
  >
    <button
      className="Button"
      onClick={[MockFunction]}
      style={Object {}}
    >
      This is a Material Button
    </button>
  </Material Button>
</ButtonWrapper(Material Button)>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "customClass" 1`] = `
<Material Button
  className="customClass"
  finalClass="Button customClass"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "danger" 1`] = `
<Material Button
  finalClass="Button Danger"
  type="danger"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "dark" 1`] = `
<Material Button
  finalClass="Button Dark"
  type="dark"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "none danger" 1`] = `
<Material Button
  finalClass="Button None Danger"
  type="none danger"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "none dark" 1`] = `
<Material Button
  finalClass="Button None Dark"
  type="none dark"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "none primary" 1`] = `
<Material Button
  finalClass="Button None Primary"
  type="none primary"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "none success" 1`] = `
<Material Button
  finalClass="Button None Success"
  type="none success"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "none warning" 1`] = `
<Material Button
  finalClass="Button None Warning"
  type="none warning"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "none" 1`] = `
<Material Button
  finalClass="Button None"
  type="none"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "outline danger" 1`] = `
<Material Button
  finalClass="Button Outline Danger"
  type="outline danger"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "outline dark" 1`] = `
<Material Button
  finalClass="Button Outline Dark"
  type="outline dark"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "outline primary" 1`] = `
<Material Button
  finalClass="Button Outline Primary"
  type="outline primary"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "outline success" 1`] = `
<Material Button
  finalClass="Button Outline Success"
  type="outline success"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "outline warning" 1`] = `
<Material Button
  finalClass="Button Outline Warning"
  type="outline warning"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "outline" 1`] = `
<Material Button
  finalClass="Button Outline"
  type="outline"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "primary" 1`] = `
<Material Button
  finalClass="Button Primary"
  type="primary"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "success" 1`] = `
<Material Button
  finalClass="Button Success"
  type="success"
>
  This is a Material Button
</Material Button>
`;

exports[`For Material Button :  Should correctly render Button with cssClass = "warning" 1`] = `
<Material Button
  finalClass="Button Warning"
  type="warning"
>
  This is a Material Button
</Material Button>
`;
